# source_location

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  examples.yml  ut.yml
cmake/: source_location.pc.in  source_locationConfig.cmake.in
examples/: CMakeLists.txt  example_app.cpp
include/source_location/: source_location.hpp
tests/: CMakeLists.txt  source_location_tests.cpp
